# rsa_global

./: .gitignore  README.md  alembic.ini  db.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 65f4e40ee69e_generate_application_tables.py  6d965d5cab71_generate_user_table.py  fddc9a569873_status_reminder_and_archived_columns_.py
controllers/: application.py  user.py
models/: application.py  user.py
routes/: application.py  user.py
rsa_frontend/: next.config.mjs  package-lock.json  package.json
rsa_frontend/src/app/: layout.js  page.js
rsa_frontend/src/app/application/: page.jsx
rsa_frontend/src/app/dashboard/: page.jsx
rsa_frontend/src/app/register/: page.jsx
rsa_frontend/src/app/status/: page.jsx
rsa_frontend/src/app/status/[id]/: page.jsx
rsa_frontend/src/app/tracker/: page.jsx
rsa_frontend/src/components/: Application.jsx  Dashboard.jsx  Header.jsx  HomeHeader.jsx  Homepage.jsx  OpenAi.jsx  Register.jsx  Status.jsx  Tracker.jsx
rsa_frontend/src/provider/: ProtectedProvider.jsx  ToastProvider.jsx
rsa_frontend/src/shared/: api.jsx  baseFetch.jsx
rsa_frontend/src/utils/: utils.jsx
schemas/: application.py  application_form.py  user.py
security/: security.py
temporal/activities/: application_activities.py
temporal/worker/: worker.py
temporal/workflows/: application_workflow.py
