[project]
name = "rsa-global"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
    "pdfminer-six>=20250506",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.7",
    "python-docx>=1.2.0",
    "python-jose[cryptograpy]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
